objects/metazoa3__snapshot_perm__c.object
<CustomObject>
    <description>This is an administrative object for Snapshot Change and Release Automation. This object controls the feature set Snapshot provides to licensed users.</description>
    <fields>
        <fullName>metazoa3__extra_field_one__c</fullName>
        <label>Extra Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_two__c</fullName>
        <label>Extra Field Two</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__object_type__c</fullName>
        <label>Object Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__perm_data__c</fullName>
        <label>Perm Data</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__user_list__c</fullName>
        <label>User List</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Snapshot Permission</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>